$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-03-21 [A] Added user-contributed Dutch language file (thread ID 64109) {GauGau}
2010-03-19 [B] Fixed issue when admin renames file and new file name already exists (thread ID 61956) {eenemeenemuu}
2010-03-19 [B] Fixed error message after upload for registered users (thread ID 64117) {eenemeenemuu}
2010-03-19 [C] Removed hard coded table header layout in user manager (thread ID 64166) {eenemeenemuu}
2010-03-18 [O] Removed reference to oudated config setting 'display_social_bookmarks' (thread ID 64143) {GauGau}
2010-03-18 [B] Fixed clickable keyword in file information (thread ID 64151) {eenemeenemuu}
2010-03-18 [B] Fixed clickable keyword search (thread ID 64151) {eenemeenemuu}
2010-03-17 [C] Fixed a lot of cosmetical issues with curve theme and IE7 {timoswelt}
2010-03-16 [B] Fixed deprecated warning message on plugin manager (thread ID 62560) {eenemeenemuu}
2010-03-16 [O] Updated Polish language file (user contribution) {GauGau}
2010-03-15 [D] Added documentation section about forgotten passwords {GauGau}
2010-03-14 [D] Fixed link to upgrade section (thread ID 64092) {GauGau}
2010-03-13 [B] Fixed search issue (thread ID 64087) {eenemeenemuu}
2010-03-12 [D] Added details about language selectors to documentation {GauGau}
2010-03-12 [C] Fixed contact form validation issues (thread ID 64074) {eenemeenemuu}
2010-03-12 [C] Further improved curve IE6 compatibility {timoswelt}
2010-03-12 [M] Moved valid_meta_albums array to init.inc.php (thread ID 63977) {eenemeenemuu}
2010-03-12 [C] Fixed comment input box width {eenemeenemuu}